<resources>
    <string name="app_name">Video.ME</string>
    <string name="just_now_update">刚刚</string>
    <string name="my_channel">我的频道</string>
    <string name="edit_tip">长按编辑，拖拽排序</string>
    <string name="edit">编辑</string>
    <string name="finish">完成</string>
    <string name="setting">设置</string>
    <string name="night_theme">夜间模式</string>
    <string name="smart_night_theme">开启智能夜间模式</string>
    <string name="day_theme">日间模式</string>
    <string name="clean_cache">清除缓存</string>
    <string name="version_check">检查版本</string>
    <string name="version_info">版本信息</string>
    <string name="wifi_tips">非WIFI下播放提醒（提醒一次）</string>
    <string name="app_about">关于</string>
    <string name="search">搜索</string>
    <string name="search_default">输入想要搜索内容</string>
    <string name="history">历史记录</string>
    <string name="hot">热点</string>
    <string name="net_error">网络不可用</string>
    <string name="retry">点击重试</string>
</resources>
