<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/my_channel_tip"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_channel"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="2dp"
            />

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_tip"
            android:textColor="@color/gray"
            android:textSize="12sp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="2dp"
            android:layout_toRightOf="@id/my_channel_tip"
            android:layout_alignBottom="@id/my_channel_tip"
            />

        <TextView
            android:id="@+id/channel_edit_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:layout_alignParentRight="true"
            android:layout_marginRight="8dp"
            android:layout_alignBottom="@id/my_channel_tip"
            android:background="@drawable/channel_mgr_tip_bg"
            android:textSize="16sp"
            android:textColor="@color/red"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:gravity="center"
            />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"

        />
</LinearLayout>