<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <include
        layout="@layout/tools_bar_layout"/>

    <com.pbn.org.news.skin.widget.SkinScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="8dp"
        android:background="@color/skin_item_setting_scroll_bg_color"
        >
        <com.pbn.org.news.skin.widget.SkinLinearLayout
            android:id="@+id/setting_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/skin_item_setting_bg_color"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="54dp"

                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                >
                <com.pbn.org.news.skin.widget.SkinTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wifi_tips"
                    android:textSize="16sp"
                    android:layout_centerVertical="true"
                    android:textColor="@color/skin_item_setting_item_text_color"
                    />

                <Switch
                    android:id="@+id/wifi_tips_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:thumb="@drawable/switch_thume"
                    android:track="@drawable/switch_track"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    />
            </RelativeLayout>
            <com.pbn.org.news.skin.widget.SkinView
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/skin_item_setting_splite_line_color"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="8dp"
                >
                <com.pbn.org.news.skin.widget.SkinTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/night_theme"
                    android:textSize="16sp"
                    android:layout_centerVertical="true"
                    android:textColor="@color/skin_item_setting_item_text_color"
                    />

                <Switch
                    android:id="@+id/theme_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:thumb="@drawable/switch_thume"
                    android:track="@drawable/switch_track"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    />
            </RelativeLayout>
            <com.pbn.org.news.skin.widget.SkinView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/skin_item_setting_splite_line_color"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="8dp"
                >
                <com.pbn.org.news.skin.widget.SkinTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/smart_night_theme"
                    android:textSize="16sp"
                    android:layout_centerVertical="true"
                    android:textColor="@color/skin_item_setting_item_text_color"
                    />

                <Switch
                    android:id="@+id/theme_smart_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:thumb="@drawable/switch_thume"
                    android:track="@drawable/switch_track"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    />
            </RelativeLayout>
            <com.pbn.org.news.skin.widget.SkinView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/skin_item_setting_splite_line_color"/>
            <RelativeLayout
                android:id="@+id/cache_size_container"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                >
                <com.pbn.org.news.skin.widget.SkinTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clean_cache"
                    android:textSize="16sp"
                    android:layout_centerVertical="true"
                    android:textColor="@color/skin_item_setting_item_text_color"
                    />

                <com.pbn.org.news.skin.widget.SkinTextView
                    android:id="@+id/cache_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="305kb"
                    android:textColor="@color/skin_item_setting_item_text_color"
                    />
            </RelativeLayout>
            <com.pbn.org.news.skin.widget.SkinView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/skin_item_setting_splite_line_color"/>
            <RelativeLayout
                android:id="@+id/version_info_container"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                >
                <com.pbn.org.news.skin.widget.SkinTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version_info"
                    android:textSize="16sp"
                    android:layout_centerVertical="true"
                    android:textColor="@color/skin_item_setting_item_text_color"
                    />

                <com.pbn.org.news.skin.widget.SkinTextView
                    android:id="@+id/version_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="1.0.0"
                    android:textColor="@color/skin_item_setting_item_text_color"
                    />
            </RelativeLayout>

            <com.pbn.org.news.skin.widget.SkinView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/skin_item_setting_splite_line_color"/>
            <RelativeLayout
                android:id="@+id/app_about_container"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:visibility="gone"
                >
                <com.pbn.org.news.skin.widget.SkinTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_about"
                    android:textSize="16sp"
                    android:layout_centerVertical="true"
                    android:textColor="@color/skin_item_setting_item_text_color"
                    />

            </RelativeLayout>



        </com.pbn.org.news.skin.widget.SkinLinearLayout>
    </com.pbn.org.news.skin.widget.SkinScrollView>
</LinearLayout>